# College-Board

./: .gitignore  README.md  main.py  pyproject.toml
collegeboard_crawling/: scrapy.cfg
collegeboard_crawling/collegeboard_crawling/: items.py  middlewares.py  pipelines.py  settings.py
src/: .gitignore  README.md
src/college_board_scraper/: core.py  helpers.py
